[gd_scene load_steps=49 format=2]

[ext_resource path="res://Enemies/Mushroom/Mushroom-Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Mushroom/Idle.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Mushroom/536603__hoggington__pain-sound-in-mask.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/Mushroom/533840__rickplayer__hurt-dying.ogg" type="AudioStream" id=4]
[ext_resource path="res://Player/547042__eponn__hit-impact-sword-3.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Healthbar/over.png" type="Texture" id=6]
[ext_resource path="res://Assets/Healthbar/under.png" type="Texture" id=7]
[ext_resource path="res://Assets/Healthbar/progress.png" type="Texture" id=8]
[ext_resource path="res://Enemies/Mushroom/mushroom-Normal.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.5
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.145, 0.215 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.22, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "enableHitbox"
}, {
"args": [  ],
"method": "disableHitbox"
}, {
"args": [  ],
"method": "setStateWonder"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Die"
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queueFree"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hurt"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Ready Attack"
length = 0.4
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09, 0.21, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.39 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "setStateAttack"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35, 0.5, 0.65, 0.8, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Ready Attack"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachine" id=30]
states/Attack/node = SubResource( 7 )
states/Attack/position = Vector2( 610, 436 )
states/Die/node = SubResource( 8 )
states/Die/position = Vector2( 75, 178 )
states/Hurt/node = SubResource( 9 )
states/Hurt/position = Vector2( 653, 29 )
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 301, 16 )
"states/Ready Attack/node" = SubResource( 11 )
"states/Ready Attack/position" = Vector2( 814, 233 )
states/Walk/node = SubResource( 12 )
states/Walk/position = Vector2( 170, 412 )
transitions = [ "Idle", "Hurt", SubResource( 13 ), "Hurt", "Idle", SubResource( 14 ), "Idle", "Walk", SubResource( 15 ), "Walk", "Idle", SubResource( 16 ), "Walk", "Hurt", SubResource( 17 ), "Hurt", "Walk", SubResource( 18 ), "Idle", "Ready Attack", SubResource( 19 ), "Walk", "Ready Attack", SubResource( 20 ), "Hurt", "Ready Attack", SubResource( 21 ), "Ready Attack", "Attack", SubResource( 22 ), "Attack", "Idle", SubResource( 23 ), "Idle", "Die", SubResource( 24 ), "Hurt", "Die", SubResource( 25 ), "Ready Attack", "Die", SubResource( 26 ), "Attack", "Die", SubResource( 27 ), "Walk", "Die", SubResource( 28 ), "Ready Attack", "Hurt", SubResource( 29 ) ]
start_node = "Idle"
end_node = "Die"
graph_offset = Vector2( -194, -37 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=31]

[sub_resource type="CapsuleShape2D" id=32]
height = 14.1689

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 10, 16.3761 )

[sub_resource type="RayShape2D" id=34]
length = 100.0

[sub_resource type="RayShape2D" id=35]
length = 100.0

[sub_resource type="RayShape2D" id=36]
length = 35.0

[sub_resource type="RayShape2D" id=37]
length = 35.0

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 9.80034, 10 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 9.78929, 10 )

[node name="Enemy-Mushroom" type="KinematicBody2D"]
scale = Vector2( 0.667074, 0.667074 )
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
normal_map = ExtResource( 9 )
flip_h = true
hframes = 28

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Die = SubResource( 2 )
anims/Hurt = SubResource( 3 )
anims/Idle = SubResource( 4 )
"anims/Ready Attack" = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 30 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8.61732 )
shape = SubResource( 32 )

[node name="Enemy-Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy-Hitbox"]
modulate = Color( 0.513726, 0.027451, 0.027451, 1 )
position = Vector2( 0, 8.61732 )
shape = SubResource( 33 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -11.4964, 10.789 )
rotation = 0.785397
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 4

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 12.2039, 10.6121 )
rotation = -0.785397
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 4

[node name="RayCastWallLeft" type="RayCast2D" parent="."]
position = Vector2( -11.6733, 6.19039 )
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 6

[node name="RayCastWallRight" type="RayCast2D" parent="."]
position = Vector2( 11.8502, 5.30606 )
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 6

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.097
pitch_scale = 0.65
bus = "SFX"

[node name="KnockBackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerDetectionLeft" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionLeft"]
rotation = 1.57079
shape = SubResource( 34 )

[node name="PlayerDetectionRight" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionRight"]
rotation = -1.57079
shape = SubResource( 35 )

[node name="AttackReadyLeft" type="Area2D" parent="."]
position = Vector2( -2.47142, 1.52492 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackReadyLeft"]
position = Vector2( 9.53674e-07, 8.95158 )
rotation = 1.57079
shape = SubResource( 36 )

[node name="AttackReadyRight" type="Area2D" parent="."]
position = Vector2( -12.0334, 1.52492 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackReadyRight"]
position = Vector2( 13.9692, 8.61732 )
rotation = -1.57079
shape = SubResource( 37 )

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.69
bus = "SFX"

[node name="SwordHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.81
bus = "SFX"

[node name="Healthbar" type="Control" parent="."]
visible = false
margin_left = -7.8909
margin_top = -17.665
margin_right = -7.8909
margin_bottom = -17.665
rect_scale = Vector2( 0.35793, 0.35793 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="Healthbar"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 4.0
value = 4.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthBarTimer" type="Timer" parent="Healthbar"]
wait_time = 4.0

[node name="LeftAttackBox" type="Area2D" parent="."]
position = Vector2( -20.8355, 10.0278 )
scale = Vector2( 2.01938, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftAttackBox"]
shape = SubResource( 38 )
disabled = true

[node name="RightAttackBox" type="Area2D" parent="."]
position = Vector2( 20.9277, 10.0278 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightAttackBox"]
scale = Vector2( 2.01938, 1 )
shape = SubResource( 39 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="KnockBackTimer" to="." method="_on_KnockBackTimer_timeout"]
[connection signal="body_entered" from="PlayerDetectionLeft" to="." method="_on_PlayerDetectionLeft_body_entered"]
[connection signal="body_exited" from="PlayerDetectionLeft" to="." method="_on_PlayerDetectionLeft_body_exited"]
[connection signal="body_entered" from="PlayerDetectionRight" to="." method="_on_PlayerDetectionRight_body_entered"]
[connection signal="body_exited" from="PlayerDetectionRight" to="." method="_on_PlayerDetectionRight_body_exited"]
[connection signal="body_entered" from="AttackReadyLeft" to="." method="_on_AttackReadyLeft_body_entered"]
[connection signal="body_entered" from="AttackReadyRight" to="." method="_on_AttackReadyRight_body_entered"]
[connection signal="body_entered" from="LeftAttackBox" to="." method="_on_LeftAttackBox_body_entered"]
[connection signal="body_exited" from="LeftAttackBox" to="." method="_on_LeftAttackBox_body_exited"]
[connection signal="body_entered" from="RightAttackBox" to="." method="_on_RightAttackBox_body_entered"]
[connection signal="body_exited" from="RightAttackBox" to="." method="_on_RightAttackBox_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
